templates/ctcprotostar/css/template.css
/* ... */
@media (max-width: 480px) {
	.item-info > span {
		display: block;
	}
	.blog-item .pull-right.item-image {
		margin: 0 0 18px 0;
	}
	.blog-item .pull-left.item-image {
		margin: 0 0 18px 0;
		float: none;
	}
}
@media (max-width: 768px) {
	body {
		padding-top: 0;
	}
	.header {
		background: transparent;
	}
	.header .brand {
		float: none;
		display: block;
		text-align: center;
	}
	.header .nav.pull-right,
	.header-search {
		float: none;
		display: block;
	}
	.header-search form {
		margin: 0;
	}
	.header-search .search-query {
		width: 90%;
	}
	.header .nav-pills > li > a {
		border: 1px solid #ddd;
		border-bottom: 0;
		margin: 0;
		-webkit-border-radius: 0;
		-moz-border-radius: 0;
		border-radius: 0;
		margin-right: 0;
	}
	.header .nav-pills > li:first-child > a {
		-webkit-border-radius: 4px 4px 0 0;
		-moz-border-radius: 4px 4px 0 0;
		border-radius: 4px 4px 0 0;
	}
	.header .nav-pills > li:last-child > a {
		-webkit-border-radius: 0 0 4px 4px;
		-moz-border-radius: 0 0 4px 4px;
		border-radius: 0 0 4px 4px;
		border-bottom: 1px solid #ddd;
	}
	.modal.fade {
		top: -100%;
	}
	.nav-tabs {
		border-bottom: 0;
	}
	.nav-tabs > li {
		float: none;
	}
	.nav-tabs > li > a {
		border: 1px solid #ddd;
		-webkit-border-radius: 0;
		-moz-border-radius: 0;
		border-radius: 0;
		margin-right: 0;
	}
	.nav-tabs > li:first-child > a {
		-webkit-border-radius: 4px 4px 0 0;
		-moz-border-radius: 4px 4px 0 0;
		border-radius: 4px 4px 0 0;
	}
	.nav-tabs > li:last-child > a,
	.nav-tabs > .active:last-child > a {
		-webkit-border-radius: 0 0 4px 4px;
		-moz-border-radius: 0 0 4px 4px;
		border-radius: 0 0 4px 4px;
		border-bottom: 1px solid #ddd;
	}
	.nav-tabs > li > a:hover {
		border-color: #ddd;
		z-index: 2;
	}
	.nav-tabs.nav-dark > li > a {
		border: 1px solid #333;
	}
	.nav-tabs > li:last-child > a,
	.nav-tabs > .active:last-child > a {
		border-bottom: 1px solid #333;
	}
	.nav-tabs.nav-dark > li > a:hover {
		border-color: #333;
	}
	.nav-pills > li {
		float: none;
	}
	.nav-pills > li > a {
		margin-right: 0;
	}
	.nav-pills > li > a {
		margin-bottom: 3px;
	}
	.nav-pills  > li:last-child > a {
		margin-bottom: 1px;
	}
	.form-search > .pull-left,
	.form-search > .pull-right {
		float: none;
		display: block;
		margin-bottom: 9px;
	}
}
@media (max-width: 980px) {
	.navbar-fixed-top {
		margin-bottom: 0 !important;
	}
	.item-comment .item-image {
		display: none;
	}
	.well {
		padding: 10px;
	}
}
@media (max-width: 979px) {
	.nav-collapse.in.collapse {
		overflow: visible;
		height: 0;
		z-index: 100;
	}
}
@media (min-width: 768px) and (max-width: 979px) {
	#login-form .input-small {
		width: 62px;
	}
}
dl.tabs {
	float: left;
	margin-bottom: -1px;
}
dl.tabs dt.tabs {
	float: left;
	margin-left: 3px;
	padding: 4px 10px;
	background-color: #F0F0F0;
	border-top: 1px solid #CCC;
	border-left: 1px solid #CCC;
	border-right: 1px solid #CCC;
}
dl.tabs dt:hover {
	background-color: #F9F9F9;
}
dl.tabs dt.open {
	background-color: #FFF;
	border-bottom: 1px solid #FFF;
}
dl.tabs dt.tabs h3 {
	margin: 0;
	font-size: 1.1em;
	font-weight: normal;
}
dl.tabs dt.tabs h3 a {
	color: #0088CC;
}
dl.tabs dt.tabs h3 a:hover {
	color: #005580;
	text-decoration: none;
}
dl.tabs dt.open h3 a {
	color: #000;
	text-decoration: none;
}
div.current dd.tabs {
	margin: 0;
	padding: 10px;
	clear: both;
	border: 1px solid #CCC;
	background-color: #FFF;
}
#helpsite-refresh {
	vertical-align: top;
}
#pop-print {
	float: right;
	margin: 10px;
}
code {
	white-space: pre-wrap;
}
#filter-search {
	vertical-align: top;
}
.editor {
	overflow: hidden;
	position: relative;
}
.search span.highlight {
	background-color: #FFFFCC;
	font-weight: bold;
	padding: 1px 4px;
}
body.modal-open {
	overflow: hidden;
	-ms-overflow-style: none;
}
#users-profile-custom label {
	display: inline;
}

/* CTC -----others-----*/

.back_button {
    margin-top: 12px;
}

.captioned-thumbnail {
    padding: 2px;
    border: #B0B0B0 solid 1px;
    display: table;
}

p.thumbnail-caption {
    display: table-caption; 
    caption-side: bottom;
    text-align: center;
    font-size: smaller;
    border-left: #B0B0B0 solid 1px;
    border-right: #B0B0B0 solid 1px;
    border-bottom: #B0B0B0 solid 1px;
    background-color: #E8E8E8;
}

div.spacer {
  clear: both;
}

div.GPXFileList {
    margin-top: 16px;
}

div.RouteMapList {
    margin-top: 16px;
}

#members td {
    padding-left: 3px;
    padding-right: 3px;
}

#members td.col1 {
    text-align: center;
}

/* dbcaptionedimage */
body.dbcaptionedimage {
    background-color: black;
    padding-top: 10px;
}

div.fullimagepage {
    text-align: center;
}

p.fullimagecaption {
    color: white;
    text-align: center;
    margin-top: 10px;
}

p.imageButtons {
    padding-top: 12px;
}

p.imageButtons {
    padding-top: 12px;
}

p.imageButtons input[type="button"] {
    border-radius: 5px;
    padding: 4px;
}

span.inactiveimagelink, a.imagelink, input.closewindowbutton {
    padding: 4px;
    color:white;
    border-radius: 5px;
    background-color: #404040;
}

a.tripreportlink {
    color: #FFFF88;
}

a.tripreportlink:hover {
    color: #FFFFFF;
    background-color: #202020;
}

span.inactiveimagelink {
    color: gray;
    background-color: #202020;
}

a.imagelink:hover, input.closewindowbutton:hover {
    background-color:#606060;
    color: #ffffd0;
}

/* Trip report submission form styles */

form.tripreportform select {
    border: 1px solid black;
}

table.imageupload {
    width: 100%;
}

table.tripReportFiles th {
    padding-top:10px;
    padding-bottom: 5px;
    padding-left: 5px;
}

td.filenameTD {
    padding: 2px;
    margin-top: 5px;
    width: 72%;
}

table.fileUpload td.input {
    align: right;
    text-align: right;
}

table.fileUpload input {
    margin: 0;
}


button.changeFile {
    border: 1px solid;
    width: 75px;
}

/* Stuff for sorting resources when editing trip reports */
.sortable-list {
    list-style-type: none; margin: 0; padding: 0
}
/* ... */

